--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.android.support:recyclerview-v7:23.3.+'
 }
